prevent index.html file from reset during building process

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "Apache-2.0",
   "main": "index.js",
   "scripts": {
-    "gulp": "gulp",
+    "build": "gulp",
+    "start": "gulp connect",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
